<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:clickable="true">

    <CheckBox android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/checkbox_text_size_medium"
        android:id="@+id/checkFirstWitness"
        android:layout_marginTop="@dimen/protocol_edits_margin_top"
        android:layout_centerHorizontal="true"
        android:text="@string/first_witness_check"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/checkFirstWitness"
        android:id="@+id/firstWitnessPanel">

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/s_name_first_witness_edit"
            android:layout_marginTop="@dimen/protocol_edits_margin_top"
            android:hint="@string/s_name_edit_hint"
            style="@style/BaseEditText"/>

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/f_name_first_witness_edit"
            android:layout_marginTop="@dimen/protocol_edits_margin_top"
            android:hint="@string/f_name_edit_hint"
            style="@style/BaseEditText"/>

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/m_name_first_witness_edit"
            android:layout_marginTop="@dimen/protocol_edits_margin_top"
            android:hint="@string/m_name_edit_hint"
            style="@style/BaseEditText"/>

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:id="@+id/address_first_witness_edit"
            android:layout_marginTop="@dimen/protocol_edits_margin_top"
            android:hint="@string/address_edit_hint"
            style="@style/BaseEditText"/>

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:id="@+id/phone_first_witness_edit"
            android:layout_marginTop="@dimen/protocol_edits_margin_top"
            android:hint="@string/phone_edit_hint"
            style="@style/BaseEditText"/>

    </LinearLayout>

    <CheckBox android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/checkbox_text_size_medium"
        android:id="@+id/checkSecondWitness"
        android:layout_marginTop="@dimen/protocol_edits_margin_top"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/firstWitnessPanel"
        android:text="@string/second_witness_check"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/checkSecondWitness"
        android:id="@+id/secondWitnessPanel">

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/s_name_second_witness_edit"
            android:layout_marginTop="@dimen/protocol_edits_margin_top"
            android:hint="@string/s_name_edit_hint"
            style="@style/BaseEditText"/>

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/f_name_second_witness_edit"
            android:layout_marginTop="@dimen/protocol_edits_margin_top"
            android:hint="@string/f_name_edit_hint"
            style="@style/BaseEditText"/>

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/m_name_second_witness_edit"
            android:layout_marginTop="@dimen/protocol_edits_margin_top"
            android:hint="@string/m_name_edit_hint"
            style="@style/BaseEditText"/>

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:id="@+id/address_second_witness_edit"
            android:layout_marginTop="@dimen/protocol_edits_margin_top"
            android:hint="@string/address_edit_hint"
            style="@style/BaseEditText"/>

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:id="@+id/phone_second_witness_edit"
            android:layout_marginTop="@dimen/protocol_edits_margin_top"
            android:hint="@string/phone_edit_hint"
            style="@style/BaseEditText"/>

    </LinearLayout>

</RelativeLayout>