<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/authorization_title"
            android:id="@+id/title_authorization"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="@dimen/title_authorization_size"
            android:textStyle="bold|italic"
            android:visibility="visible"
            android:layout_weight="1"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="org.fr2eman.accountingoffenses.AuthorizationActivity"
            android:background="@color/backgroundColor"
            android:layout_weight="0.5">

            <EditText
                android:id="@+id/authorization_edit_private_number"
                android:hint="@string/private_number_edit_hint"
                android:inputType="number"
                android:layout_marginTop="@dimen/authorization_edittext_vertical_margin"
                android:layout_marginLeft="@dimen/authorization_edittext_horizontal_margin"
                android:layout_marginRight="@dimen/authorization_edittext_horizontal_margin"
                android:adjustViewBounds="true"
                style="@style/BaseEditText"/>

            <EditText
                android:inputType="textPassword"
                android:id="@+id/authorization_edit_password"
                android:hint="@string/password_edit_hint"
                android:layout_marginTop="@dimen/authorization_edittext_vertical_margin"
                android:layout_marginLeft="@dimen/authorization_edittext_horizontal_margin"
                android:layout_marginRight="@dimen/authorization_edittext_horizontal_margin"
                android:layout_below="@id/authorization_edit_private_number"
                style="@style/BaseEditText"
                android:textCursorDrawable="@null"/>

            <Button
                android:text="@string/authorization_button"
                android:id="@+id/button_authorization"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/button_text_size_medium"
                android:layout_below="@id/authorization_edit_password"
                android:layout_alignRight="@id/authorization_edit_password"
                android:layout_marginTop="@dimen/authorization_edittext_vertical_margin"
                android:clickable="true"
                style="@style/BaseButton"/>
        </RelativeLayout>

</LinearLayout>
